--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,8 @@ disqus_shortname: "rainyalley"
 
 
 
-url: "http://blog.rainyalley.com"
-imgrepo: "http://blog.rainyalley.com/static/img"
+url: "http://starting.eu.org/"
+imgrepo: "http://starting.eu.org/static/img"
 #url: "http://127.0.0.1:4000"
 #imgrepo: "http://127.0.0.1:4000/static/img"
 
